--- a/client/src/components/card/style.scss
+++ b/client/src/components/card/style.scss
@@ -1,8 +1,17 @@
 @import "../../assets/css/mixin";
 
 .card {
-    &__img {
+    /* From https://css.glass */
+    background: rgba(255, 255, 255, 0.12);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.03);
+    backdrop-filter: blur(2.6px);
+    -webkit-backdrop-filter: blur(2.6px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    text-align: center;
+    overflow: hidden;
 
+    &__img {
         position: relative;
         width: 100%;
         height: 270px;
@@ -41,6 +50,10 @@
         transition: all 0.25s ease-in-out;
     }
 
+    &__content {
+        padding: 10px;
+    }
+
     &__brand {
         font-size: 0.75rem; //22px;
         font-weight: 400;
@@ -52,6 +65,15 @@
         font-size: 1rem;
         font-weight: 500;
         text-transform: capitalize;
+        margin-bottom: 10px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        /* number of lines to show */
+        line-clamp: 2;
+        -webkit-box-orient: vertical;
+
     }
 
     &__price-old {
